--- a/public/index.html
+++ b/public/index.html
@@ -3,60 +3,70 @@
 <head> 
 	<title>Minecraft Server Status</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+	<link rel="stylesheet" href="style.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
 </head> 
+<style>
+.avatar{
+	left: 10px;
+	top: 10px;
+	height:60px;
+}
+</style>
+
 <body> 
 
-<div data-role="page">
-
-	<div data-role="header">
-		<h1>MC Status</h1>
+<div data-role="page" id="home">
+	<div data-role="header" data-theme="f" data-position="fixed">
+		<h1>Minecraft Info</h1>
+        <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
 	</div><!-- /header -->
 
 	<div data-role="content">	
 		<h2>Server Status: <span id="serverStatus" style="color:red;">Offline</span></h2>
-		<h2>Users Online: <span id="userCount"></span></h2>
+		<h2><span id="userCount"></span> Users Online</h2>
 		<ul data-role="listview" data-inset="true" id="users">
 		</ul>
-		<p>Last Backup: <span id="lastBackup"></span></p>
+		<h2>Information</h2>
+		<ul data-role="listview" data-inset="true">
+			<li>Last backup was <span id="lastBackup"></span>.</li>
+			<li>Last updated <span id="lastUpdated"></span>.</li>
+		</ul>
+		<a href="#" data-role="button" id="refresh" data-icon="refresh">Refresh</a>
 	</div><!-- /content -->
-
+	<div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
+		<ul data-role="listview" data-theme="a" class="nav-search">
+            <li data-icon="delete"><a href="#" data-rel="close">Close menu</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#logs">Logs</a></li>
+            <li><a href="#">World Info</a></li>
+            <li><a href="#">World Map</a></li>
+		</ul>
+	</div><!-- /panel -->
 </div><!-- /page -->
 
-<script type="text/javascript">
-	(function($){
-		var userCount = 0,
-			loadData = function(){
-				$.ajax('/online.json').done(function(data){
-					userCount = data.onlineCount;
-					$('#userCount').text([data.onlineCount, data.maxOnline].join('/'));
-					$('#lastBackup').text(data.lastBackup.split('storage/')[1]);
-					$('#serverStatus').text(data.status ? 'Online' : 'Offline').css('color', data.status ? 'green' : 'red');
-					var users = $('#users').empty();
-					$(data.userList).each(function(i, user){
-						users
-							.append($('<li/>')
-								.text(user)
-								.append($('<img src="block.jpg"/>')
-									.addClass('ui-li-icon')));
-					});
-
-					users.listview('refresh');
-					if(parseInt(data.onlineCount, 10) > 0) users.show();
-					else users.hide();
-				});			
-			},
-			start = function(){
-				loadData();
-				window.setTimeout(loadData, 5000);
-			};
-
-		$(document).ready(start);
-	})(jQuery);
-</script>
-
+<div data-role="page" id="logs">
+	<div data-role="header" data-theme="f" data-position="fixed">
+		<h1>Minecraft Log</h1>
+        <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+	</div><!-- /header -->
+	<div data-role="content">
+		<div id="logContent"></div>
+	</div>
+	<div data-role="panel" data-position-fixed="true" data-theme="a" id="nav-panel">
+		<ul data-role="listview" data-theme="a" class="nav-search">
+            <li data-icon="delete"><a href="#" data-rel="close">Close menu</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#logs">Logs</a></li>
+            <li><a href="#">World Info</a></li>
+            <li><a href="#">World Map</a></li>
+		</ul>
+	</div><!-- /panel -->
+<div>
+<script type="text/javascript" src="moment.js"></script>
+<script type="text/javascript" src="minecraft.js"></script>
 
 </body>
 </html>
